--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     container_name: database
     environment:
       - POSTGRES_PASSWORD=nopassword
-      - POSTGRES_USER=rinha_de_backend
-      - POSTGRES_DB=rinha_backend
+      - POSTGRES_USER=rinha_backend
+      - POSTGRES_DB=production
     ports:
       - "5432:5432"
     volumes:
@@ -28,7 +28,7 @@ services:
       - ENV=production
       - LOG_LEVEL=info
       - HTTP_ADDR=8000
-      - POSTGRES_DSN="postgres://rinha_de_backend:nopassword@postgres:5432/production?sslmode=disable"
+      - POSTGRES_DSN="postgres://rinha_backend:nopassword@postgres:5432/production?sslmode=disable"
     expose:
       - "8000:8000"
     hostname: service01
