--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       - "5432:5432"
     volumes:
       - ./script.sql:/docker-entrypoint-initdb.d/script.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+      start_period: 10s
     deploy:
       resources:
         limits:
@@ -28,13 +34,14 @@ services:
       - ENV=production
       - LOG_LEVEL=info
       - HTTP_ADDR=8000
-      - POSTGRES_DSN="postgres://rinha_backend:nopassword@postgres:5432/production?sslmode=disable"
+      - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable
     expose:
       - "8000:8000"
     hostname: service01
     container_name: service-01
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     deploy:
       resources:
         limits:
