--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,10 @@ services:
     volumes:
       - ./script.sql:/docker-entrypoint-initdb.d/script.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 5s
+      test: "pg_isready -h db"
+      interval: 3s
       timeout: 5s
-      retries: 20
-      start_period: 10s
+      retries: 5
     deploy:
       resources:
         limits:
@@ -32,6 +31,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - ENV=production
+      - GOMEMLIMIT=110MiB
       - LOG_LEVEL=info
       - HTTP_ADDR=8000
       - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable
@@ -53,17 +53,17 @@ services:
     hostname: service02
     container_name: service-02
 
-  nginx:
-    image: nginx:latest
+  haproxy:
+    image: haproxy:2.9-alpine
     container_name: load-balancer
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
     depends_on:
       - service01
       - service02
-    ports: 
-      # Obrigatório expor/usar a porta 9999 no load balancer!
-      - "9999:9999" 
+    ports:
+      - 9999:9999
+    restart: unless-stopped
     deploy:
       resources:
         limits:
@@ -73,4 +73,4 @@ services:
 networks:
   default:
     driver: bridge
-    name: rinha-nginx-2024q1
+    name: rinha-backend-2024-Q1
