--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,15 +14,14 @@ services:
     volumes:
       - ./script.sql:/docker-entrypoint-initdb.d/script.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 5s
+      test: "pg_isready -h db"
+      interval: 3s
       timeout: 5s
-      retries: 20
-      start_period: 10s
+      retries: 5
     deploy:
       resources:
         limits:
-          cpus: "0.2"
+          cpus: "0.3"
           memory: "200MB"
 
   service01: &service
@@ -45,7 +44,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.55'
+          cpus: '0.50'
           memory: '128MB'
 
   service02:
