--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "5432:5432"
     volumes:
       - ./script.sql:/docker-entrypoint-initdb.d/script.sql
+      - ./postgresql.conf:/etc/postgresql/postgresql.conf
     healthcheck:
       test: "pg_isready -h db"
       interval: 3s
@@ -21,7 +22,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.3"
+          cpus: "0.6"
           memory: "200MB"
 
   service01: &service
@@ -32,10 +33,10 @@ services:
     environment:
       - ENV=production
       - LOG_LEVEL=info
-      - HTTP_ADDR=8000
+      - HTTP_ADDR=8001
       - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable
     expose:
-      - "8000:8000"
+      - "8001:8001"
     hostname: service01
     container_name: service-01
     depends_on:
@@ -44,13 +45,36 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.50'
+          cpus: '0.35'
           memory: '128MB'
 
   service02:
     <<: *service
     hostname: service02
     container_name: service-02
+    expose:
+      - "8002:8002"
+    environment:
+      - ENV=production
+      - LOG_LEVEL=info
+      - HTTP_ADDR=8002
+      - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable
+  #haproxy:
+  #  image: haproxy:2.9-alpine
+  #  container_name: load-balancer
+  #  volumes:
+  #    - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+  #  depends_on:
+  #    - service01
+  #    - service02
+  #  ports:
+  #    - 9999:9999
+  #  restart: unless-stopped
+  #  deploy:
+  #    resources:
+  #      limits:
+  #        cpus: "0.2"
+  #        memory: "32MB"
 
   nginx:
     image: nginx:latest
