--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,19 @@
+worker_processes auto;
+
 events {
-    worker_connections 1000;
+    worker_connections 4096;
 }
 
 http {
     access_log off;
     sendfile   on;
+    error_log off;
     
     upstream api {
-        server service01:8000;
-        server service02:8000;
+        server service01:8001;
+        server service02:8002;
+        least_conn;
+        keepalive 100;
     }
 
     server {
@@ -16,6 +21,8 @@ http {
         
         location / {
             proxy_pass http://api;
+            proxy_connect_timeout 9000;
+            proxy_send_timeout 9000;
         }
     }
 }
