feat: updates the resource distribution

--- a/postgresql.conf
+++ b/postgresql.conf
@@ -1,20 +1,6 @@
 listen_addresses = '*'
-max_connections = 200         
-fsync = off                             # avoid the flush data to disk
-synchronous_commit = off                # synchronization level;
-log_min_messages = panic            
-log_min_error_statement = panic        # values in order of decreasing detail:
-                                        #   debug5
-                                        #   debug4
-                                        #   debug3
-                                        #   debug2
-                                        #   debug1
-                                        #   info
-                                        #   notice
-                                        #   warning
-                                        #   error
-                                        #   log
-                                        #   fatal
-                                        #   panic (effectively off)
-log_min_duration_statement = -1        
-log_min_duration_sample = -1          
+max_connections = 200
+shared_buffers = 80MB
+synchronous_commit=off
+kernel.shmmax=100663296
+fsync=off
