--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.6"
-          memory: "200MB"
+          cpus: "0.76"
+          memory: "380MB"
 
   service01: &service
     build:
@@ -34,7 +34,7 @@ services:
       - ENV=production
       - LOG_LEVEL=info
       - HTTP_ADDR=8001
-      - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable
+      - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable&pool_max_conns=19
     expose:
       - "8001:8001"
     hostname: service01
@@ -45,8 +45,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.35'
-          memory: '128MB'
+          cpus: '0.27'
+          memory: '50MB'
 
   service02:
     <<: *service
@@ -58,23 +58,7 @@ services:
       - ENV=production
       - LOG_LEVEL=info
       - HTTP_ADDR=8002
-      - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable
-  #haproxy:
-  #  image: haproxy:2.9-alpine
-  #  container_name: load-balancer
-  #  volumes:
-  #    - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-  #  depends_on:
-  #    - service01
-  #    - service02
-  #  ports:
-  #    - 9999:9999
-  #  restart: unless-stopped
-  #  deploy:
-  #    resources:
-  #      limits:
-  #        cpus: "0.2"
-  #        memory: "32MB"
+      - POSTGRES_DSN=postgres://rinha_backend:nopassword@db:5432/production?sslmode=disable&pool_max_conns=19
 
   nginx:
     image: nginx:latest
@@ -91,7 +75,7 @@ services:
       resources:
         limits:
           cpus: "0.2"
-          memory: "32MB"
+          memory: "70MB"
 
 networks:
   default:
